--- a/api/backend/package.json
+++ b/api/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^11.0.6",    
     "@nestjs/typeorm": "^11.0.0",
     "@prisma/client": "^6.4.0",
     "@supabase/supabase-js": "^2.48.1",
@@ -34,10 +35,14 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "connect-redis": "^8.0.1",
+    "csurf": "^1.2.2",
     "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.1",
     "firebase-admin": "^13.1.0",
     "google-auth-library": "^9.15.1",
-    "ioredis": "^5.5.0",
+    "helmet": "^8.0.0",
+    "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "mixpanel": "^0.18.0",
     "passport": "^0.7.0",
@@ -52,6 +57,7 @@
     "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
     "stripe": "^17.6.0",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
@@ -62,6 +68,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.17.19",
     "@types/supertest": "^6.0.0",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^8.0.0",
