--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -35,6 +35,7 @@
     "@radix-ui/react-visually-hidden": "^1.1.2",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
+    "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.66.7",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
